--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context="com.onexzgj.skin.activity.MainActivity">
 
     <TextView
         android:id="@+id/tb_am_title"
@@ -36,5 +36,16 @@
         android:layout_marginTop="10dp"
         android:text="默认"
         android:textColor="#fff" />
+
+
+    <Button
+        android:id="@+id/btn_am_change_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:layout_marginTop="10dp"
+        android:text="Second Activity"
+        android:textColor="#fff" />
+
 
 </LinearLayout>
