--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
-    android:orientation="vertical"
-    tools:context="com.onexzgj.skin.activity.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TextView
-        android:id="@+id/tb_am_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimaryDark"
-        android:gravity="center_vertical"
-        android:paddingLeft="5dp"
-        android:text="换肤框架"
-        android:textSize="18sp"
-        android:textColor="#fff"
-        />
+        android:layout_height="match_parent"
+        android:background="@drawable/bg"
+        android:orientation="vertical"
+        tools:context="com.onexzgj.skin.activity.MainActivity">
 
-    <Button
-        android:id="@+id/btn_am_change_skin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:text="换肤"
-        android:layout_marginTop="10dp"
-        android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/btn_am_change_default"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:layout_marginTop="10dp"
-        android:text="默认"
-        android:textColor="#fff" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/action_bar"
+            android:background="@color/colorPrimary"
+            app:title="换肤框架"/>
 
 
-    <Button
-        android:id="@+id/btn_am_change_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:layout_marginTop="10dp"
-        android:text="Second Activity"
-        android:textColor="#fff" />
+        <TextView
+            android:id="@+id/tb_am_title"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center_vertical"
+            android:paddingLeft="5dp"
+            android:text="换肤框架"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btn_am_change_skin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="换肤"
+            android:textColor="#fff" />
+
+        <Button
+            android:id="@+id/btn_am_change_default"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="默认"
+            android:textColor="#fff" />
 
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btn_am_change_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="Second Activity"
+            android:textColor="#fff" />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        android:background="@drawable/drawlayout_bg">
+
+        <TextView
+            android:id="@+id/tv_am_change_skin_blue"
+            android:layout_marginTop="100dp"
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="蓝色"
+            android:background="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textColor="#fff"/>
+
+
+        <TextView
+            android:id="@+id/tv_am_change_skin_red"
+            android:layout_marginTop="40dp"
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:text="红色"
+            android:gravity="center"
+            android:background="#88ff57ff"
+            android:textSize="18sp"
+            android:textColor="#fff"/>
+
+
+
+        <TextView
+            android:id="@+id/tv_am_change_default"
+            android:layout_width="240dp"
+            android:layout_marginTop="40dp"
+            android:layout_height="40dp"
+            android:text="恢复"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="#fff"/>
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
