--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -18,95 +18,222 @@
             android:id="@+id/toolbar"
             style="@style/action_bar"
             android:background="@color/colorPrimary"
-            app:title="换肤框架"/>
+            app:title="换肤框架"
+            app:titleTextColor="@color/title_color" />
 
-
-        <TextView
-            android:id="@+id/tb_am_title"
+        <LinearLayout
+            android:id="@+id/ll_am_music"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimaryDark"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            android:text="换肤框架"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:orientation="horizontal"
+            android:padding="5dp">
 
-        <Button
-            android:id="@+id/btn_am_change_skin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="换肤"
-            android:textColor="#fff" />
-
-        <Button
-            android:id="@+id/btn_am_change_default"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="默认"
-            android:textColor="#fff" />
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/logo" />
 
 
-        <Button
-            android:id="@+id/btn_am_change_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/colorPrimaryDark"
-            android:text="Second Activity"
-            android:textColor="#fff" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="center_vertical"
+                android:text="本地音乐"
+                android:textColor="@color/text_color"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/music" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="center_vertical"
+
+                android:text="最近播放"
+                android:textColor="@color/text_color"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/download" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="center_vertical"
+                android:text="下载管理"
+                android:textColor="@color/text_color"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/me" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:gravity="center_vertical"
+                android:text="我的收藏"
+                android:textColor="@color/text_color"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimary" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            app:cardMaxElevation="5dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            android:layout_margin="20dp"
+            android:layout_height="150dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="CardView"
+                android:textSize="22sp"
+                android:gravity="center"
+                android:textColor="@color/text_color"
+                android:background="@color/colorPrimary"/>
+
+        </android.support.v7.widget.CardView>
 
 
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="240dp"
+        android:layout_width="232dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_gravity="start"
+        android:background="@color/colorPrimary"
         android:fitsSystemWindows="true"
-        android:background="@drawable/drawlayout_bg">
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="232dp"
+            android:layout_height="80dp"
+            android:gravity="center"
+            android:text="选择主题样式"
+            android:textColor="#fff"
+            android:textSize="18sp" />
+
 
         <TextView
             android:id="@+id/tv_am_change_skin_blue"
-            android:layout_marginTop="100dp"
-            android:layout_width="240dp"
-            android:layout_height="40dp"
+            android:layout_width="232dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="80dp"
+            android:background="#1296db"
             android:gravity="center"
             android:text="蓝色"
-            android:background="@color/colorPrimary"
-            android:textSize="18sp"
-            android:textColor="#fff"/>
+            android:textColor="#fff"
+            android:textSize="18sp" />
 
 
         <TextView
-            android:id="@+id/tv_am_change_skin_red"
-            android:layout_marginTop="40dp"
-            android:layout_width="240dp"
-            android:layout_height="40dp"
-            android:text="红色"
+            android:id="@+id/tv_am_change_skin_green"
+            android:layout_width="232dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="32dp"
+            android:background="#008577"
             android:gravity="center"
-            android:background="#88ff57ff"
-            android:textSize="18sp"
-            android:textColor="#fff"/>
-
+            android:text="翡翠色"
+            android:textColor="#fff"
+            android:textSize="18sp" />
 
 
         <TextView
             android:id="@+id/tv_am_change_default"
-            android:layout_width="240dp"
-            android:layout_marginTop="40dp"
-            android:layout_height="40dp"
-            android:text="恢复"
+            android:layout_width="232dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="32dp"
+            android:background="#ff0000"
             android:gravity="center"
-            android:textSize="18sp"
-            android:background="@color/colorPrimaryDark"
-            android:textColor="#fff"/>
+            android:text="红色"
+            android:textColor="#fff"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
