--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#e83935</color>
+    <color name="colorPrimaryDark">#e53935</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="title_color">#FFFFFF</color>
+    <color name="text_color">#7b1fa2</color>
 </resources>
